recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:10: error: ';' expected but 'else' found.
}else{
 ^PolygonFractal:17: error: expected start of definition
	override def run() {
                 ^PolygonFractal:21: error: Unmatched closing brace '}' ignored here
}
^